force-app/main/default/objects/Industry_Code__mdt/Industry_Code__mdt.object-meta.xml
<CustomObject>
    <description>지방행정인허가 업종코드(식품/제조/가공/판매)</description>
    <label>지방인허가 업종코드</label>
</CustomObject>