force-app/main/default/objects/Industry_Code__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>업종목록 활성화</description>
    <inlineHelpText>리드에 저장되는 업종목록을 활성화 비활성화 시킬수 있음</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>