force-app/main/default/objects/Industry_Code__mdt/fields/IndustryCode__c.field-meta.xml
<CustomField>
    <fullName>IndustryCode__c</fullName>
    <description>업종코드</description>
    <label>업종코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>