force-app/main/default/objects/Industry_Code__mdt/fields/IndustryName__c.field-meta.xml
<CustomField>
    <fullName>IndustryName__c</fullName>
    <description>업종명</description>
    <label>업종명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>